# ML-Movie-Recommendation-System

./: .replit  Another_copy_of_152_Project.ipynb  README.md  app.py  pyproject.toml  vectorizer.pickle
pickles/: links.pkl  tags.pkl  tfidf.pickle
static/css/: style.css
templates/: base.html  index.html  movies.html
templates/components/: header.html
